Fixed the issue with the nav bar disappearing unexpectedly. The cause was a single line in the main .scss file which set the navbar-collapse area to display:none with an !important.

--- a/HireRight/Content/sass/_mobile-default.scss
+++ b/HireRight/Content/sass/_mobile-default.scss
@@ -83,9 +83,6 @@ span .image-text-overlay {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
     }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
     .navbar-nav {
         float: none!important;
         margin: 7.5px -15px;
